# activity-tracker

./: CLAUDE.md  README.md  SPEC.md  docker-compose.yml  justfile  openapi.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  models.rs
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  utils.ts
frontend/src/api/: index.ts  schema.ts  types.ts
frontend/src/components/: ActivityDetail.tsx  ActivityList.tsx  AddEntry.tsx  EditEntry.tsx  StatsChart.tsx
