[package]
name = "tracker-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tracker"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
utoipa = { version = "4", features = ["axum_extras"] }
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1"
